Ensure there is adequate space before pip content on mobile

--- a/web/themes/custom/union_marketing/scss/components/_picture-in-picture.scss
+++ b/web/themes/custom/union_marketing/scss/components/_picture-in-picture.scss
@@ -56,5 +56,11 @@
 
   > .cu-image {
     opacity: 0;
+    min-height: 100vh;
+
+    @include breakpoint(md) {
+      min-height: auto;
+    }
+  }
   }
 }
